fixed projects alignment

--- a/src/style/paralax.css
+++ b/src/style/paralax.css
@@ -28,7 +28,7 @@
 .project-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 .first-project{
